# python_btc_19

./: README.md  database.db  exemplo_01.py  pyproject.toml
src/: db.py  main.py  models.py  schema.py
