[tool.poetry]
name = "python-btc-19"
version = "0.1.0"
description = ""
authors = ["jeantorre <jean.torre21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"
pre-commit = "^3.8.0"
fastapi = {extras = ["standard"], version = "^0.114.0"}
pydantic = "^2.9.0"
sqlalchemy = "^2.0.34"
pytz = "^2024.1"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
